Fix footer alignment

--- a/resource/support/css/engine.css
+++ b/resource/support/css/engine.css
@@ -17,6 +17,7 @@ div.open-button {
   position: fixed;
   top: 1vh;
   right: 1vh;
+  z-index: 1000;
 
   color: gray;
   background-color: rgba(0, 0, 0, 0);
@@ -25,7 +26,7 @@ div.open-button {
 
   transition-property: visibility;
 
-  font-size: 10vh;
+  font-size: 5vh;
 }
 
 /* Badge for the open button*/
@@ -52,7 +53,7 @@ div.badge {
   vertical-align: baseline;
   white-space: nowrap;
   border-radius: 0.4em;
-  padding: 0.15em 0.3em;
+  padding: 0.2em 0.4em;
 }
 
 div.q-panel.open {
@@ -273,7 +274,7 @@ div.q-panel div.q-footer {
 
   display: flex;
   flex-flow: row nowrap;
-  align-items: baseline;
+  align-items: center;
 
   background-color: rgba(0, 0, 0, 0.1);
   padding: 0.3em;
@@ -309,7 +310,6 @@ div.q-panel div.q-footer div.credentials input {
 
 div.q-panel div.q-footer div.q-login {
   flex: 0 1;
-  font-size: 1em;
 
   color: gray;
   background-color: rgba(0, 0, 0, 0);
